# food_semantic_segmentation_group42

./: .gitignore  CMakeLists.txt  README.md
Carmine/: CMakeLists.txt
Carmine/include/: gaborFeatures.h  mySegmentation.h
Carmine/src/: ConsoleApplication1.cpp  gaborFeatures.cpp  mySegmentation.cpp
Daniele/DetectFood/: CMakeLists.txt
Daniele/DetectFood/include/: FeatureComparator.cpp  FeatureComparator.h  plates.cpp  plates.h
Daniele/DetectFood/src/: DetectFood.cpp  FeatureComparator.cpp  LabelFeatures.cpp  PlateRemover.cpp  food.cpp
Daniele/FeatureCompare/: CMakeLists.txt
Daniele/FeatureCompare/include/: features.cpp  features.h
Daniele/FeatureCompare/src/: compare.cpp
Daniele/FindPlates/: CMakeLists.txt
Daniele/FindPlates/src/: plates.cpp
Group42_SummerProject/: CMakeLists.txt  README.md
Group42_SummerProject/include/: FoodFinder.h  FoodSegmenter.h  HistogramThresholder.h  Test.h  Tray.h
Group42_SummerProject/input/Food_leftover_dataset/tray2/: leftover1.txt
Group42_SummerProject/src/: FoodFinder.cpp  HistogramThresholder.cpp  MetricsCalculation.cpp  Tray.cpp  Utils.cpp
KmeansSegmentation/: AP.cpp
MainProject/: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.txt
MainProject/data/: label_features.yml  label_histograms.json  labels_histograms.json  labels_histograms.txt
MainProject/features/: label_features.yml
MainProject/include/: FeatureComparator.h  FindFood.h  FoodFinder.h  FoodSegmenter.h  HistogramComparator.h  HistogramThresholder.h  MetricsCalculation.h  PlateRemover.h  PlatesFinder.h  SegmentFood.h  SegmentationFoods.h  Test.h  Tray.h  Trays.h  Utils.h
MainProject/input/Food_leftover_dataset/tray2/: food_image.txt
MainProject/output/tray1/: food_image.txt  leftover2.txt
MainProject/src/: EvaluateLabelsHistograms.cpp  FeatureComparator.cpp  FindFood.cpp  FoodFinder.cpp  FoodSegmenter.cpp  HistogramComparator.cpp  HistogramThresholder.cpp  LabelFeatures.cpp  LabelHistograms.cpp  MetricsCalculation.cpp  PlateRemover.cpp  PlatesFinder.cpp  SegmentFood.cpp  Test.cpp  Tray.cpp  Tray_.cpp  Tray_before_changes.cpp  Tray_old.cpp  Trays.cpp  Utils.cpp  main.cpp  mainTest.cpp  main_bread_test.cpp  main_refine_segmentation_test.cpp
Nicola/: CMakeLists.txt
Nicola/detect_bread/: CMakeLists.txt
Nicola/detect_bread/src/: detect_bread.cpp
Nicola/detect_multimg/: CMakeLists.txt
Nicola/detect_multimg/include/: PlatesFinder.h
Nicola/detect_multimg/src/: PlatesFinder.cpp  detect_plates backup.cpp  detect_plates.cpp
Nicola/detect_singleimg/: CMakeLists.txt
Nicola/detect_singleimg/include/: PlatesFinder.h
Nicola/detect_singleimg/src/: detect_plate.cpp  detect_plates.cpp
Nicola/include/: Tray.h
Nicola/src/: PlatesFinder.cpp  Tray.cpp  detect_plate.cpp  test_lib.cpp
Nicola/test_projection_notworking/: detect_plates.cpp  detect_plates_in_path.cpp
backup/MainProject/include/: Tray.h
backup/MainProject/src/: Trays.cpp  main.cpp
backup/v1_5723/MainProject/: CMakeLists.txt
backup/v1_5723/MainProject/src/: Tray.cpp
backup/v2_6723/MainProject/include/: PlateRemover.h  SegmentationFoods.h
backup/v2_6723/MainProject/src/: FeatureComparator.cpp  LabelFeatures.cpp  Tray.cpp
backup/v4_7723/MainProject/: CMakeLists.txt
backup/v4_7723/MainProject/data/: label_features.yml
backup/v4_7723/MainProject/output/tray1/: leftover2.txt
backup/v4_7723/MainProject/src/: FeatureComparator.cpp  Test.cpp  main.cpp
src/: test01.cpp
src/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
